--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    scroll-snap-type: y mandatory;
+    background-color: #7C93C3;
+    color: #E1D7B7;
+}
+
+html {
+    scroll-behavior: smooth;
+    
+  }
