--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,7 +13,7 @@
   
   #about {
     background-color: #7C93C3;
-    color: #1E2A5E;
+    color: #94a3b8;
   }
   
   #experience {
@@ -26,5 +26,9 @@
   
   #contact {
     background-color: #e74c3c; /* Red */
+  }
+
+  h1, h2, h3 {
+    color: #e2e8f0;
   }
   
