--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,20 +3,29 @@
     <header
       class="lg:sticky lg:top-0 lg:flex lg:py-8 lg:max-h-screen lg:w-6 lg:flex-col lg:justify-content-between"
     >
-      <div class="pr-4">
-        <h1 style="color: #1e2a5e" class="lg:text-5xl sm:text-4xl p-0 m-0 flex-wrap">
-          <strong>Joanna Sokołowska</strong> 
+      <div class="p-2">
+        <h1 class="lg:text-6xl sm:text-6xl p-0 m-0 flex-wrap">
+          <strong>Joanna Sokołowska</strong>
         </h1>
-        <h2 style="color: #1e2a5e" class="lg:text-xl">Fullstack Engineer</h2>
-        <p class="mt-4 max-w-xs line-height-3">
+        <h2 class="lg:text-lg">Fullstack Engineer</h2>
+        <p class="mt-4 max-w-xs line-height-3 text-base">
           I focus on building reliable, scalable backend systems while also
           handling frontend integration when needed, delivering end-to-end
           solutions.
         </p>
+        <nav>
+          <ul class="list-none pl-0 py-8">
+            @for (item of navItems; track $index) {
+              <li class="py-3">
+              <app-nav-item [title]="item"></app-nav-item>
+            </li>
+            }
+          </ul>
+        </nav>
       </div>
     </header>
     <main class="lg:w-6 lg:py-8">
-      <app-about id="about" class="py-8" />
+      <app-about id="about" class="py-8 text-base" />
       <app-experience id="experience" />
       <!-- <section id="about" class="mb-16 scroll-mt-16 md:mb-24 lg:mb-36 lg:scroll-mt-24"></section>
     <section id="experience" class="mb-16 scroll-mt-16 md:mb-24 lg:mb-36 lg:scroll-mt-24"></section> -->
