--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,15 +1,15 @@
-<div class="grid">
-  @for (exp of experiences; track $index) {
+@for (exp of experiences; track $index) {
+<div class="grid hover:bg-white-alpha-10 border-round-md p-2">
   <div class="col-3 text-xs">
     <span>{{ exp.duration }}</span>
   </div>
   <div class="col-9 mb-4">
     <div>
-      <h3 class="mt-0">
+      <h3 class="mt-0 text-sm hover:text-white">
         <strong>{{ exp.position }} · {{ exp.company }}</strong>
       </h3>
     </div>
-    <div>
+    <div class="text-xs">
       <p>{{ exp.description }}</p>
       @for (task of exp.tasks; track $index) {
       <p>
@@ -20,12 +20,13 @@
     <div id="skills" class="inline-flex flex-wrap">
       @for (skill of exp.techStack; track $index) {
       <span
-        class="max-w-min text-xs white-space-nowrap surface-ground hover:surface-500 border-round-xl surface-border border-2 m-1 p-1 flex align-items-center justify-content-center"
+        style="color: #5eead4;"
+        class="max-w-min text-xs font-medium white-space-nowrap bg-white-alpha-10 border-round-xl m-1 p-1 flex align-items-center justify-content-center"
       >
         {{ skill }}
       </span>
       }
     </div>
   </div>
-  }
 </div>
+}
