--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,24 +1,20 @@
-<div class="line-height-3 mb-8 p-2">
-  <p>
-    Back when I was a Process Engineer, managing projects and
-    designing systems, I discovered my passion for coding. That curiosity led me
-    to software development, where I now focus on creating
-    <strong>backend systems</strong> using <strong>Java</strong> and
-    <strong>Kotlin</strong> that are scalable and maintainable, with a strong
-    foundation in <strong>best practices</strong>.
-  </p>
-  <p>
-    I’m also capable of handling <strong>frontend work</strong> with
-    <strong>Angular</strong> when needed, but my heart lies in
-    <strong>backend architecture</strong> and
-    <strong>team collaboration</strong>. My approach is simple: with the right
-    mindset and teamwork, anything can be built. I continue to learn, driven by
-    a love for solving complex challenges and delivering
-    <strong>efficient, user-centered solutions</strong>.
-  </p>
-  <p>
-    When I’m not coding, you can find me exploring new technologies, spending
-    time with my kids, or working on <strong>DIY projects</strong> in my
-    workshop.
-  </p>
-</div>
+<p>
+  Back when I was a Process Engineer, managing projects and designing systems, I
+  discovered my passion for coding. That curiosity led me to software
+  development, where I now focus on creating
+  <strong>backend systems</strong> using <strong>Java</strong> and
+  <strong>Kotlin</strong> that are scalable and maintainable, with a strong
+  foundation in <strong>best practices</strong>.
+</p>
+<p>
+  I’m also capable of handling <strong>frontend work</strong> with
+  <strong>Angular</strong> when needed, but my heart lies in
+  <strong>backend architecture</strong> and <strong>team collaboration</strong>.
+  My approach is simple: with the right mindset and teamwork, anything can be
+  built. I continue to learn, driven by a love for solving complex challenges
+  and delivering <strong>efficient, user-centered solutions</strong>.
+</p>
+<p>
+  When I’m not coding, you can find me exploring new technologies, spending time
+  with my kids, or working on <strong>DIY projects</strong> in my workshop.
+</p>
