--- a/src/app/header/nav-item/nav-item.component.html
+++ b/src/app/header/nav-item/nav-item.component.html
@@ -1,6 +1,6 @@
-<a class="hover:text-white-alpha-90 focus:bg-gray-200"
+<a class="hover:text-white-alpha-90 focus:text-white-alpha-90" routerLinkActive="active" [routerLink]="['/']" [fragment]="title.toLowerCase()"
   ><span
     class="nav-indicator transition-all mr-4 mb-2 p-0 bg-gray-600 hover:w-2 focus:w-2 focus:bg-gray-200"
   ></span>
-  <span class="text-sm bold-text">{{ title }}</span></a
+  <span class="text-xs bold-text">{{ title }}</span></a
 >
