--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,15 +1,15 @@
 @for (exp of experiences; track $index) {
 <div class="grid hover:bg-white-alpha-10 border-round-md p-2">
-  <div class="col-3 text-xs">
+  <div class="col-3 text-sm">
     <span>{{ exp.duration }}</span>
   </div>
   <div class="col-9 mb-4">
     <div>
-      <h3 class="mt-0 text-sm hover:text-white">
+      <h3 class="mt-0 text-base hover:text-white">
         <strong>{{ exp.position }} · {{ exp.company }}</strong>
       </h3>
     </div>
-    <div class="text-xs">
+    <div class="text-sm">
       <p>{{ exp.description }}</p>
       @for (task of exp.tasks; track $index) {
       <p>
@@ -20,7 +20,7 @@
     <div id="skills" class="inline-flex flex-wrap">
       @for (skill of exp.techStack; track $index) {
       <span
-        style="color: #5eead4;"
+        style="color: #5eead4"
         class="max-w-min text-xs font-medium white-space-nowrap bg-white-alpha-10 border-round-xl m-1 p-1 flex align-items-center justify-content-center"
       >
         {{ skill }}
