--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,23 @@
-<p>header works!</p>
+<header
+  class="lg:sticky lg:top-0 lg:flex lg:py-8 lg:max-h-screen lg:flex-col lg:justify-content-between"
+>
+  <div class="p-2">
+    <h1 class="lg:text-6xl sm:text-6xl p-0 m-0 flex-wrap">
+      <strong>Joanna Sokołowska</strong>
+    </h1>
+    <h2 class="lg:text-lg">Fullstack Engineer</h2>
+    <p class="mt-4 max-w-xs line-height-3 text-base">
+      I focus on building reliable, scalable backend systems while also handling
+      frontend integration when needed, delivering end-to-end solutions.
+    </p>
+    <nav>
+      <ul class="list-none pl-0 py-8">
+        @for (item of navItems; track $index) {
+        <li class="py-3">
+          <app-nav-item [title]="item"></app-nav-item>
+        </li>
+        }
+      </ul>
+    </nav>
+  </div>
+</header>
