--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,11 +2,9 @@
 @import 'primeflex/primeflex.scss';
 @import '@fontsource/inter';
 
-
 body {
   margin: 0;
   font-family: 'Inter', sans-serif;
-  scroll-snap-type: y mandatory;
   background: linear-gradient(to right, #131c36, #0f172a);
   color: #94a3b8;
   transition: background 0.1s ease; 
@@ -14,6 +12,11 @@ body {
 
 html {
   scroll-behavior: smooth; 
+}
+
+section {
+  font-size: 2rem;
+  color: #94a3b8;
 }
 
 h1, h2, h3, strong {
