navigating between sections

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -15,6 +15,7 @@
   and delivering <strong>efficient, user-centered solutions</strong>.
 </p>
 <p>
-  When I’m not coding, you can find me exploring new technologies, spending time
-  with my kids, or working on <strong>DIY projects</strong> in my workshop.
+  Outside of coding, I enjoy reading books on self-development, psychology, and
+  the power of the human mind. You might also find me cycling, swimming, or
+  simply spending time with my family, always eager to learn and grow.
 </p>
