styling, project section and blog posts section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,11 @@
     <app-header class="lg:w-6"></app-header>
     <main class="lg:w-6">
       <section id="about" appSectionHighlight="about" class="pt-8 line-height-3 p-2" ><app-about class="text-base"/></section>
-      <section id="experience" appSectionHighlight="experience" class="pt-8 line-height-3 p-2">
+      <section id="experience" appSectionHighlight="experience" class="pt-8 line-height-3 p-2 min-h-screen">
         <app-experience />
       </section>
-      <section id="projects" appSectionHighlight="projects" class="pt-8 line-height-3p-2"><app-projects /></section>
-      <section id="blog" appSectionHighlight="blog" class="pt-8 line-height-3 p-2"><app-blog-posts /></section>
+      <section id="projects" appSectionHighlight="projects" class="pt-8 line-height-3 p-2 min-h-screen"><app-projects /></section>
+      <section id="blog" appSectionHighlight="blog" class="mt-8 line-height-3 p-2 min-h-screen"><app-blog-posts /></section>
     </main>
   </div>
 </div>
