--- a/src/app/blog-posts/blog-posts.component.html
+++ b/src/app/blog-posts/blog-posts.component.html
@@ -1,1 +1,4 @@
-<p>blog-posts works!</p>
+<div>
+  <h3 class="mt-0 text-base hover:text-white">Blog Posts Coming Soon!</h3>
+  <p class="text-sm">Stay tuned for updates and new content.</p>
+</div>
