--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header
-  class="lg:sticky lg:top-0 lg:flex lg:py-8 lg:max-h-screen lg:flex-col lg:justify-content-between"
+  class="lg:sticky lg:top-0 lg:bottom-0 lg:flex lg:pt-8 lg:max-h-screen lg:flex-col lg:justify-content-between"
 >
-  <div class="p-2">
+  <div class="px-2">
     <h1 class="lg:text-6xl sm:text-6xl p-0 m-0 flex-wrap">
       <strong>Joanna Sokołowska</strong>
     </h1>
@@ -11,7 +11,7 @@
       frontend integration when needed, delivering end-to-end solutions.
     </p>
     <nav>
-      <ul class="list-none pl-0 py-8">
+      <ul class="list-none pl-0 py-8 m-0">
         @for (item of navItems; track $index) {
         <li class="py-3">
           <app-nav-item [title]="item"></app-nav-item>
