--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,7 +1,7 @@
 @for (exp of experiences; track $index) {
 <div class="grid hover:bg-white-alpha-10 border-round-md p-2">
-  <div class="col-3 text-sm">
-    <span>{{ exp.duration }}</span>
+  <div class="col-3 text-xs bold-text">
+    <span>{{ exp.duration.toUpperCase() }}</span>
   </div>
   <div class="col-9 mb-4">
     <div>
