styling for small devices

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header
-  class="lg:sticky lg:top-0 lg:bottom-0 lg:flex lg:pt-8 lg:max-h-screen lg:flex-col lg:justify-content-between"
+  class="lg:sticky lg:top-0 lg:bottom-0 lg:flex pt-8 lg:max-h-screen lg:flex-col lg:justify-content-between"
 >
   <div class="px-2">
     <h1 class="lg:text-6xl sm:text-6xl p-0 m-0 flex-wrap">
@@ -10,7 +10,7 @@
       I focus on building reliable, scalable backend systems while also handling
       frontend integration when needed, delivering end-to-end solutions.
     </p>
-    <nav>
+    <nav class="hidden lg:block">
       <ul class="list-none pl-0 py-8 m-0">
         @for (item of navItems; track $index) {
         <li class="py-3">
