--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,35 @@
-<div class="mx-8 min-h-screen px-8">
+<div class="lg:mx-8 min-h-screen lg:px-8 px-4">
   <div class="lg:flex lg:justify-content-between lg:gap-4 lg:bg-blue-900">
     <app-header class="lg:w-6"></app-header>
     <main class="lg:w-6">
-      <section id="about" appSectionHighlight="about" class="pt-8 line-height-3 p-2" ><app-about class="text-base"/></section>
-      <section id="experience" appSectionHighlight="experience" class="pt-8 line-height-3 p-2 min-h-screen">
+      <section
+        id="about"
+        appSectionHighlight="about"
+        class="pt-8 line-height-3 p-2"
+      >
+        <app-about class="text-base" />
+      </section>
+      <section
+        id="experience"
+        appSectionHighlight="experience"
+        class="pt-8 line-height-3 p-2 min-h-screen"
+      >
         <app-experience />
       </section>
-      <section id="projects" appSectionHighlight="projects" class="pt-8 line-height-3 p-2 min-h-screen"><app-projects /></section>
-      <section id="blog" appSectionHighlight="blog" class="mt-8 line-height-3 p-2 min-h-screen"><app-blog-posts /></section>
+      <section
+        id="projects"
+        appSectionHighlight="projects"
+        class="pt-8 line-height-3 p-2 min-h-screen"
+      >
+        <app-projects />
+      </section>
+      <section
+        id="blog"
+        appSectionHighlight="blog"
+        class="mt-8 line-height-3 p-2 min-h-screen"
+      >
+        <app-blog-posts />
+      </section>
     </main>
   </div>
 </div>
