styling on smaller screens - section headers

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,4 @@
+<app-section-header [sectionName]="sectionName()" />
 <p>
   Back when I was a Process Engineer, managing projects and designing systems, I
   discovered my passion for coding. That curiosity led me to software
