--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,3 +1,5 @@
+<app-section-header [sectionName]="sectionName()" />
+
 @for (exp of experiences; track $index) {
 <div class="grid hover:bg-white-alpha-10 border-round-md p-2">
   <div class="col-3 text-xs bold-text">
