--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,37 @@
-<div class="lg:mx-8 min-h-screen lg:px-8 px-4">
-  <div class="lg:flex lg:justify-content-between lg:gap-4 lg:bg-blue-900">
-    <app-header class="lg:w-6" [navItems]="navItems"></app-header>
-    <main class="lg:w-6">
-      <section
-        id="about"
-        appSectionHighlight="about"
-        class="pt-8 line-height-3 p-2"
-      >
-        <app-about class="text-base" [sectionName]="navItems[0]" />
-      </section>
-      <section
-        id="experience"
-        appSectionHighlight="experience"
-        class="pt-8 line-height-3 p-2 min-h-screen"
-      >
-        <app-experience [sectionName]="navItems[1]" />
-      </section>
-      <section
-        id="projects"
-        appSectionHighlight="projects"
-        class="pt-8 line-height-3 p-2 min-h-screen"
-      >
-        <app-projects [sectionName]="navItems[2]" />
-      </section>
-      <section
-        id="blog"
-        appSectionHighlight="blog"
-        class="mt-8 line-height-3 p-2 min-h-screen"
-      >
-        <app-blog-posts [sectionName]="navItems[3]" />
-      </section>
-    </main>
+<div class="flex justify-content-center">
+  <div class="container mx-auto min-h-screen px-6 py-7 md:py-8 lg:py-0">
+    <div class="lg:flex lg:justify-content-between lg:gap-4 lg:bg-blue-900">
+      <app-header class="lg:w-6" [navItems]="navItems"></app-header>
+      <main class="lg:w-6">
+        <section
+          id="about"
+          appSectionHighlight="about"
+          class="pt-8 line-height-3 p-2"
+        >
+          <app-about class="text-base" [sectionName]="navItems[0]" />
+        </section>
+        <section
+          id="experience"
+          appSectionHighlight="experience"
+          class="pt-8 line-height-3 p-2 min-h-screen"
+        >
+          <app-experience [sectionName]="navItems[1]" />
+        </section>
+        <section
+          id="projects"
+          appSectionHighlight="projects"
+          class="pt-8 line-height-3 p-2 min-h-screen"
+        >
+          <app-projects [sectionName]="navItems[2]" />
+        </section>
+        <section
+          id="blog"
+          appSectionHighlight="blog"
+          class="mt-8 line-height-3 p-2 min-h-screen"
+        >
+          <app-blog-posts [sectionName]="navItems[3]" />
+        </section>
+      </main>
+    </div>
   </div>
 </div>
