--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,2 +1,25 @@
-
+.container {
+    max-width: 100%;
+  }
+  @media (min-width: 640px) {
+    .container {
+      max-width: 600px;
+    }
+  }
+  @media (min-width: 768px) {
+    .container {
+      max-width: 768px;
+    }
+  }
+  @media (min-width: 1024px) {
+    .container {
+      max-width: 1024px;
+    }
+  }
+  @media (min-width: 1280px) {
+    .container {
+      max-width: 1280px;
+    }
+  }
+  
   
