--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,16 +1,16 @@
 <header class="lg:sticky lg:top-0 lg:bottom-0 lg:flex lg:min-h-screen">
   <div class="lg:py-8 lg:flex lg:flex-column lg:justify-content-between">
     <div class="px-2">
-      <h1 class="lg:text-6xl sm:text-6xl p-0 m-0 flex-wrap">
+      <h1 class="lg:text-6xl p-0 m-0 flex-wrap">
         <strong>Joanna Sokołowska</strong>
       </h1>
       <h2 class="lg:text-lg">Fullstack Engineer</h2>
       <p class="mt-4 max-w-xs line-height-3 text-base">
-        I focus on building reliable, scalable backend systems while also
-        handling frontend integration when needed, delivering end-to-end
-        solutions.
+        I help create reliable backend systems and ensure smooth integration by
+        focusing on writing clean, maintainable code, following best practices,
+        deep analysis, and solid testing.
       </p>
-      <nav class="hidden lg:block flex-grow-1">
+      <nav class="hidden lg:block lg:py-5 flex-grow-1">
         <ul class="list-none pl-0 m-0">
           @for (item of navItems(); track $index) {
           <li class="py-3">
